@@ -55,6 +55,7 @@ cat('# Analysis of the', .simpleCap(DataName), 'data, using', .simpleCap(Respons
 #### Prepared by ', getOption("BrailleR.Author"), '  \n\n', file=Filename)
 
 cat(paste0('```{r setup2, purl=FALSE, include=FALSE}  
+', ifelse(VI, "library(BrailleR)", "library(knitr)"), '
 opts_chunk$set(dev=c("png", "pdf", "postscript", "svg"))  
 opts_chunk$set(echo=FALSE, comment="", fig.path="', Folder, '/', .simpleCap(ResponseName), '.', .simpleCap(PredictorName), '-", fig.width=7)  
 ```    
